# act-operator-email-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TEMPLATE_README.md  demo.py  index.html  langgraph.json  pyproject.toml  test_email_bot.py
.claude/skills/architecting-act/: SKILL.md
.claude/skills/architecting-act/resources/modes/: initial-design-questions.md
.claude/skills/architecting-act/templates/: CLAUDE.act.md.template  CLAUDE.cast.md.template
.claude/skills/demo-email-bot/: SKILL.md
.claude/skills/developing-cast/: SKILL.md
.claude/skills/testing-cast/: SKILL.md
.github/workflows/: ruff.yml
casts/email_bot/: README.md  __init__.py  graph.py  pyproject.toml
casts/email_bot/modules/: agents.py  conditions.py  middlewares.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
docs/: 01_act_operator_intro.md  02_hitl_email_bot.md  03_demo_and_langsmith.md
tests/cast_tests/: email_bot_test.py
